--- a/about/about.css
+++ b/about/about.css
@@ -101,7 +101,6 @@ body{
 .menu li a {
     text-decoration: none;
     color: #FF624C;
-    opacity: 1;
     font-size: 1.5em;
     font-weight: 400;
     transition: 200ms;
@@ -115,7 +114,6 @@ body{
 .menu li a i {
     text-decoration: none;
     color: #FF624C;
-    opacity: 1;
     font-size: 1em;
     font-weight: 150;
     transition: 200ms;
@@ -289,12 +287,13 @@ footer{
 
 .footer-nav ul{
 	padding-bottom: 40px;
+	margin-right: -24px;
 }
 
 .footer-nav ul li{
 	display: inline-block;
 	text-transform: uppercase;
-    margin-right: 14px;
+    margin-right: 24px;
 }
 
 .footer-nav ul li a{
@@ -330,6 +329,7 @@ footer{
 	max-width: 600px;
 	padding-left: 60px;
     padding-right: 60px;
+	padding-bottom: 40px;
 	margin: auto;
 }
 
@@ -340,12 +340,12 @@ footer{
 .footer-info p{
 	margin-bottom: 2px;
 	color: rgb(239, 239, 239);
-	letter-spacing: 1px;
 	text-decoration: none;
 	font-size: 18px;
-	letter-spacing: 3px;
+	letter-spacing: 1px;
 	color: rgb(239, 239, 239);
 	line-height: 50px;
+	letter-spacing: 2px;
 }
 
 .footer-info a{
@@ -354,6 +354,7 @@ footer{
 	color: rgb(239, 239, 239);
 	line-height: 25px;
 	text-decoration: underline;
+	text-decoration-color: #469297;
 	text-decoration-thickness: 1px;
 	text-underline-offset: 5px;
 }
@@ -362,11 +363,90 @@ footer{
 	margin-top: 40px;
 }
 
+.footer-links a i{
+	cursor: pointer;
+	color: #469297;
+}
+
+.footer-links a:hover i{
+	cursor: pointer;
+	color: #FF614B;
+}
+
 #divider{
 	font-size: 20px;
 	margin-left: 20px;
 	margin-right: 20px;
 	text-decoration: none;
+}
+
+.hours{
+	margin-top: -15px;
+	margin-bottom: 40px;
+}
+
+.hours p{
+	line-height: normal;
+	letter-spacing: normal;
+	font-size: 16px;
+}
+
+.socials-footer{
+	margin-top: 40px;
+	margin-bottom: -10px;
+}
+
+.socials-footer li a i:hover {
+    color: #ffb3a9;
+	cursor: pointer;
+}
+
+.socials-footer li a {
+    text-decoration: none;
+    color: #FF624C;
+    font-size: 1.3em;
+    font-weight: 400;
+    transition: 200ms;
+}
+
+.socials-footer li a:hover {
+	cursor: pointer;
+	color: #ffb3a9;
+}
+
+.socials-footer li a i {
+    text-decoration: none;
+    color: #FF624C;
+    font-size: 1em;
+    font-weight: 150;
+    transition: 200ms;
+}
+
+.socials-footer li{
+	display: inline-block;
+	width: 10%;
+	min-width: 40px;
+}
+
+.title-top{
+	bottom: 95vh;
+	top: 0;
+	z-index: 9999;
+	width: fit-content;
+	margin: auto;
+	margin-top: -98vh;
+	height: 8vh;
+	margin-bottom: 90vh;
+	text-shadow: 1px 1px #FF614B, 1.5px 1.5px #000000;
+}
+
+.title-top a{
+	color: rgb(249, 249, 249);
+	position: sticky;
+	position: -webkit-sticky;
+	text-decoration: none;
+	top: 2vh;
+	letter-spacing: 2px;
 }
 
 /* Header */
@@ -456,13 +536,13 @@ footer{
 
 @media screen and (max-width: 700px) {
     .header-background {
-        background-image: url(../images/HunterEyeCuriosities.jpeg);
+        background-image: url(../images/Hunter.jpg);
     }
 }
 
 @media screen and (min-width: 701px) and (max-width: 1024px) {
     .header-background {
-        background-image: url(../images/Hunter.jpg);
+        background-image: url(../images/HunterEyeCuriosities.jpeg);
     }
 }
 
@@ -473,24 +553,61 @@ footer{
 }
 
 @media (max-height: 360px){
-    .logo-top {
+	.logo-top {
         height: 42px;
         width: 52px;
     }
+
+	.title-top a{
+		font-size: calc(16px + 1vw);
+	}
 }
 
 @media (min-height: 361px) and (max-height: 600px){
-    .logo-top {
+	.logo-top {
         height: 48px;
         width: 60px;
     }
+
+	.title-top a{
+		font-size: calc(18px + 1vw);
+	}
 }
 
 @media (min-height: 601px){
-    .logo-top {
+	.logo-top {
         height: 64px;
         width: 80px;
     }
+
+	.title-top a{
+		font-size: calc(18px + 1vw);
+		letter-spacing: 2px;
+	}
+}
+
+@media (max-width: 700px) and (min-height: 601px){
+	.logo-top {
+        height: 48px;
+        width: 60px;
+    }
+
+	.title-top a{
+		font-size: calc(16px + 1vw);
+		letter-spacing: 0;
+	}
+}
+
+@media (min-width: 701px) and (max-width: 1025px){
+	.title-top a{
+		font-size: calc(16px + 1vw);
+	}
+}
+
+@media (min-width: 701px){
+	.center-text {
+		font-size: 60px;
+	}
 }
 
 @media (max-width: 500px) {
@@ -499,6 +616,40 @@ footer{
         margin-left: calc(-100vw + 54px);
         text-align: center;
     }
+}
+
+@media (max-width: 701px){
+	.contL{
+		flex-direction: column;
+	}
+
+	.contR{
+		flex-direction: column;
+	}
+
+	.box{
+		flex: 100%;
+		text-align: center;
+		width: 90vw;
+		margin-top: 40px;
+	}
+
+	.box p{
+		font-size: 3vh;
+		width: 90vw;
+	}
+
+	.img-cont {
+		width: 90vw;
+	}
+
+	.box img{
+		width: 90vw;
+	}
+	
+	.box:hover img{
+		width: 90vw;
+	}
 }
   
 @media (min-width: 501px) {
@@ -523,20 +674,5 @@ footer{
         padding-top: 45px;
         padding-bottom: 55px;
         text-align: center;
-    }
-}
-
-@media (max-height: 400px){
-    .cont{
-        display: flex;
-        margin-bottom: 1rem;
-    }
-    .text{
-        width: 100%;
-        flex: 100%;
-        padding: 1rem;
-        text-align: center;
-        margin-top: auto;
-        margin-bottom: auto;
     }
 }
