--- a/contact/contact.css
+++ b/contact/contact.css
@@ -1,5 +1,7 @@
 body{
-    margin: 0;
+	overflow-x: hidden;
+	font-family: Futura, "Trebuchet MS", Arial, sans-serif;
+	margin: 0;
 }
 
 ::-webkit-scrollbar {
@@ -79,18 +81,96 @@ body{
     opacity: 0;
 }
 
+.menu-container{
+	height: calc(100vh - 50px);
+	overflow-y: scroll;
+	margin-left: -50px;
+	margin-right: -50px;
+	margin-top: -50px;
+	padding-top: 50px;
+	margin-bottom: 50px;
+	padding-bottom:-50px;
+}
+
+.menu li{
+	height: 10%;
+	min-height: 50px;
+	transition-delay: 2s;
+}
+
 .menu li a {
     text-decoration: none;
     color: #FF624C;
-    opacity: 1;
-    font-family: 'work sans', sans serif;
     font-size: 1.5em;
     font-weight: 400;
     transition: 200ms;
 }
 
 .menu li a:hover {
+	cursor: pointer;
+	color: rgb(190, 24, 2);
+}
+
+.menu li a i {
+    text-decoration: none;
+    color: #FF624C;
+    font-size: 1em;
+    font-weight: 150;
+    transition: 200ms;
+}
+
+.nav-animate a{
+	list-style: none;
+	position: relative;
+	display: inline-block;
+	text-decoration: none;
+}
+
+.nav-animate a::after{
+	content: '';
+	position: absolute;
+	width: 100%;
+	transform: scaleX(0);
+	height: 2px;
+	bottom: 0;
+	left: 0;
+	background-color: #FF614B;
+	transition: all 0.3s ease-in-out;
+}
+
+.nav-animate a:hover::after{
+	transform: scaleX(1);
+}
+
+.socials{
+	margin-top: 4vh;
+	margin-bottom: 4vh;
+}
+
+.socials li{
+	display: inline-block;
+	width: 15%;
+}
+
+#insta {
+	font-weight: 600;
+}
+
+.socials li a:hover {
     color: #ffce48;
+	cursor: pointer;
+}
+
+.socials li a i:hover {
+    color: #ffce48;
+	cursor: pointer;
+}
+
+.nav-contact {
+	text-align: left;
+	font-size: 12px;
+	margin-left: 10%;
+	margin-top: 20px;
 }
 
 ul {
@@ -107,14 +187,12 @@ nav {
     float: right;
 }
 
-.navbox {
+.navbox{
     overflow: hidden;
-    width: 100vw;
-    height: 100vh;
-    z-index: 999;
     margin-bottom: -100vh;
     position: fixed;
     top: 0;
+	z-index: 999;
 }
   
 .menuToggle {
@@ -144,10 +222,10 @@ nav {
     height: 2.5px;
     margin-bottom: 4.2px;
     position: relative;
-    background: #ffffff;
+    background: #FF614B;
     border-radius: 3px;
     z-index: 1;
-    box-shadow: #FF614B 1.6px 1.6px 0px;
+    box-shadow: white 1.6px 1.6px 0px;
     transform-origin: 4.4px 0px;
     transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
                 background 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
@@ -180,11 +258,11 @@ nav {
   
 .menu {
     position: fixed;
-    height: calc(100vh - 100px);
+    height: calc(100vh - 50px);
     box-shadow: 0 0 10px #5b5c5e;
     top: -16px;
     padding: 50px;
-    padding-top: 100px;
+    padding-top: 50px;
     padding-bottom: 0;
     background-color: #F5F6FA;
     -webkit-font-smoothing: antialiased;
@@ -193,14 +271,182 @@ nav {
     transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0);
 	text-align: center;
 }
-
-.menu li {
-    padding: 10px 0;
-    transition-delay: 2s;
-}
-
+  
 .menuToggle input:checked ~ ul {
     transform: none;
+}
+
+/*Footer*/
+
+footer{
+	background-color: #333333;
+	display: flex;
+	width: 100vw;
+	padding-top: 60px;
+}
+
+.footer-nav ul{
+	padding-bottom: 40px;
+	margin-right: -24px;
+}
+
+.footer-nav ul li{
+	display: inline-block;
+	text-transform: uppercase;
+    margin-right: 24px;
+}
+
+.footer-nav ul li a{
+	color: #469297;
+	list-style: none;
+	position: relative;
+	display: inline-block;
+	text-decoration: none;
+}
+
+.footer-nav ul li a:hover{
+	color: #469297;
+}
+
+.footer-nav ul li a::after{
+	content: '';
+	position: absolute;
+	width: 100%;
+	transform: scaleX(0);
+	height: 2px;
+	bottom: 0;
+	left: 0;
+	background-color: #FF614B;
+	transition: all 0.3s ease-in-out;
+}
+
+.footer-nav ul li a:hover::after{
+	transform: scaleX(1);
+}
+
+.footer-container{
+	text-align: center;
+	max-width: 600px;
+	padding-left: 60px;
+    padding-right: 60px;
+	padding-bottom: 40px;
+	margin: auto;
+}
+
+.footer-info{
+	text-align: center;
+}
+
+.footer-info p{
+	margin-bottom: 2px;
+	color: rgb(239, 239, 239);
+	text-decoration: none;
+	font-size: 18px;
+	letter-spacing: 1px;
+	color: rgb(239, 239, 239);
+	line-height: 50px;
+	letter-spacing: 2px;
+}
+
+.footer-info a{
+	font-size: 16px;
+	letter-spacing: 4px;
+	color: rgb(239, 239, 239);
+	line-height: 25px;
+	text-decoration: underline;
+	text-decoration-color: #469297;
+	text-decoration-thickness: 1px;
+	text-underline-offset: 5px;
+}
+
+.footer-links{
+	margin-top: 40px;
+}
+
+.footer-links a i{
+	cursor: pointer;
+	color: #469297;
+}
+
+.footer-links a:hover i{
+	cursor: pointer;
+	color: #FF614B;
+}
+
+#divider{
+	font-size: 20px;
+	margin-left: 20px;
+	margin-right: 20px;
+	text-decoration: none;
+}
+
+.hours{
+	margin-top: -15px;
+	margin-bottom: 40px;
+}
+
+.hours p{
+	line-height: normal;
+	letter-spacing: normal;
+	font-size: 16px;
+}
+
+.socials-footer{
+	margin-top: 40px;
+	margin-bottom: -10px;
+}
+
+.socials-footer li a i:hover {
+    color: #ffb3a9;
+	cursor: pointer;
+}
+
+.socials-footer li a {
+    text-decoration: none;
+    color: #FF624C;
+    font-size: 1.3em;
+    font-weight: 400;
+    transition: 200ms;
+}
+
+.socials-footer li a:hover {
+	cursor: pointer;
+	color: #ffb3a9;
+}
+
+.socials-footer li a i {
+    text-decoration: none;
+    color: #FF624C;
+    font-size: 1em;
+    font-weight: 150;
+    transition: 200ms;
+}
+
+.socials-footer li{
+	display: inline-block;
+	width: 10%;
+	min-width: 40px;
+}
+
+.title-top{
+	bottom: 95vh;
+	top: 0;
+	z-index: 9999;
+	width: fit-content;
+	margin: auto;
+	margin-top: -98vh;
+	height: 8vh;
+	margin-bottom: 90vh;
+	text-shadow: 1px 1px #FF614B, 1.5px 1.5px #000000;
+}
+
+.title-top a{
+	color: rgb(249, 249, 249);
+	position: sticky;
+	position: -webkit-sticky;
+	text-decoration: none;
+	top: 2vh;
+	letter-spacing: 2px;
 }
 
 /* Header */
@@ -212,7 +458,6 @@ nav {
     transform: translate(-50%, -50%);
     font-size: 8vw;
     letter-spacing: 10px;
-    font-family: Futura, "Trebuchet MS", Arial, sans-serif;
     color: white;
     font-weight: bold;
     display: inline-block;
@@ -221,48 +466,12 @@ nav {
     text-shadow: 0px 0px 30px #000000;
 }
 
-/* Main content*/
-
-p{
-    font-family: Futura, "Trebuchet MS", Arial, sans-serif;
-    font-size: 30px;
-}
-
-.from{
-    font-family: Futura, "Trebuchet MS", Arial, sans-serif;
-    width: 10vw;
-    font-size: 1%;
-}
-
-.top-text{
-    text-align: left;
-    text-shadow: #ffce48 2px 2px 1px;
-}
-
-.top-image img{
-    float: right;
-    width: 50vw;
-    height: auto;
-}
-
-.middle-text{
-    text-align: right;
-}
-
-.middle-image img{
-    float: left;
-    width: 50vw;
-    height: auto;
-}
-
-.bottom-text{
-    text-align: left;
-}
-
-.bottom-image img{
-    float: right;
-    width: 50vw;
-    height: auto;
+.center{
+	background-color: #46929767;
+	margin: auto;
+	max-width: 600px;
+	margin-top: 60px;
+	margin-bottom: 60px;
 }
 
 /*Media Queries (Responsiveness)*/
@@ -286,37 +495,68 @@ p{
 }
 
 @media (max-height: 360px){
-    .logo-top {
+	.logo-top {
         height: 42px;
         width: 52px;
     }
+
+	.title-top a{
+		font-size: calc(16px + 1vw);
+	}
 }
 
 @media (min-height: 361px) and (max-height: 600px){
-    .logo-top {
+	.logo-top {
         height: 48px;
         width: 60px;
     }
+
+	.title-top a{
+		font-size: calc(18px + 1vw);
+	}
 }
 
 @media (min-height: 601px){
-    .logo-top {
+	.logo-top {
         height: 64px;
         width: 80px;
     }
+
+	.title-top a{
+		font-size: calc(18px + 1vw);
+		letter-spacing: 2px;
+	}
 }
 
 @media (max-width: 700px) and (min-height: 601px){
-    .logo-top {
+	.logo-top {
         height: 48px;
         width: 60px;
     }
+
+	.title-top a{
+		font-size: calc(16px + 1vw);
+		letter-spacing: 0;
+	}
+}
+
+@media (min-width: 701px) and (max-width: 1025px){
+	.title-top a{
+		font-size: calc(16px + 1vw);
+	}
+}
+
+@media (min-width: 701px){
+	.center-text {
+		font-size: 60px;
+	}
 }
 
 @media (max-width: 500px) {
     .menu {
         width: calc(100vw - 98px);
         margin-left: calc(-100vw + 54px);
+        text-align: center;
     }
 }
   
@@ -333,6 +573,7 @@ p{
         margin-left: calc(-100vw + 54px);
         padding-top: 45px;
         padding-bottom: 55px;
+        text-align: center;
     }
 }
 
@@ -340,26 +581,6 @@ p{
     .menu {
         padding-top: 45px;
         padding-bottom: 55px;
+        text-align: center;
     }
-}
-
-@media screen and (max-width: 700px) {
-    .from {
-        font-family: Futura, "Trebuchet MS", Arial, sans-serif;
-        font-size: 20px;
-    }
-}
-
-@media screen and (min-width: 701px) and (max-width: 1024px) {
-    .from {
-        font-family: Futura, "Trebuchet MS", Arial, sans-serif;
-        font-size: 35px;
-    }
-}
-
-@media screen and (min-width: 1025px) {
-    .from {
-        font-family: Futura, "Trebuchet MS", Arial, sans-serif;
-        font-size: 35px;
-   }
 }
