--- a/reviews/reviews.css
+++ b/reviews/reviews.css
@@ -468,87 +468,88 @@ footer{
 
 /* Main content*/
 
-#gallery {
-    line-height:0;
-    -webkit-column-count:5; /* split it into 5 columns */
-    -webkit-column-gap:5px; /* give it a 5px gap between columns */
-    -moz-column-count:5;
-    -moz-column-gap:5px;
-    column-count:5;
-    column-gap:5px;
-    margin-left: 5vw;
-    margin-right: 5vw;
-    margin-top: 20vh;
+.button-container{
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	height: 200px;
 }
 
-#gallery img {
-    width: 100% !important;
-    height: auto !important;
-    margin-bottom:5px; /* to match column gap */
-    transition: filter 0.2s;
-    filter: brightness(50%);
+.review-button {
+	display: inline-block;
+	padding: 0.75rem 1.25rem;
+	border-radius: 10rem;
+	color: #fff;
+	text-decoration: none;
+	font-size: 1rem;
+	letter-spacing: 1px;
+	transition: all 0.3s;
+	position: relative;
+	overflow: hidden;
+	z-index: 1;
+
 }
 
-#gallery img:hover {
-    filter: none;
+.review-button:after {
+	content: '';
+	position: absolute;
+	bottom: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background-color: #FF614B;
+	border-radius: 10rem;
+	z-index: -2;
+}
+.review-button:before {
+	content: '';
+	position: absolute;
+	bottom: 0;
+	left: 0;
+	width: 0%;
+	height: 100%;
+	background-color: #469297;
+	transition: all 0.3s;
+	border-radius: 10rem;
+	z-index: -1;
+}
+.review-button:hover {
+	color: #fff;
+}
+.review-button:hover:before {
+	width: 100%;
 }
 
-#darkbox {width:1280px; height:720px; position:absolute; top:0; left:0; background-color:#333; overflow: hidden; text-align:center;}
 
-.darkboximg { padding:5%; max-width: 80vw; max-height: 90vh; }
-
-/*Making image gallery responsive*/
-@media (max-width: 1200px) {
-    #gallery {
-     -moz-column-count:    4;
-     -webkit-column-count: 4;
-     column-count:         4;
+@keyframes idle {
+    0% {
+        transform: translate(0, 0px);
+    }
+    50% {
+        transform: translate(0, 5px);
+    }
+    100% {
+        transform: translate(0, -0px);
     }
 }
-
-@media (max-width: 1000px) {
-    #gallery {
-     -moz-column-count:    3;
-     -webkit-column-count: 3;
-     column-count:         3;
-    }
-}
-
-@media (max-width: 800px) {
-    #gallery {
-     -moz-column-count:    2;
-     -webkit-column-count: 2;
-     column-count:         2;
-    }
-}
-
-@media (max-width: 400px) {
-    #gallery {
-     -moz-column-count:    1;
-     -webkit-column-count: 1;
-     column-count:         1;
-    }
-}
-
-
 
 /*Media Queries (Responsiveness)*/
 
 @media screen and (max-width: 700px) {
     .header-background {
-        background-image: url(../images/HunterEyeCuriosities.jpeg);
+        background-image: url(../images/Hunter.jpg);
     }
 }
 
 @media screen and (min-width: 701px) and (max-width: 1024px) {
     .header-background {
-        background-image: url(../images/Hunter.jpg);
+        background-image: url(../images/HunterEyeCuriosities.jpeg);
     }
 }
 
 @media screen and (min-width: 1025px) {
     .header-background {
-	    background-image: url(../images/HunterAndCamGuitar.jpg);
+        background-image: url(../images/HunterAndCamGuitar.jpg);
    }
 }
 
@@ -643,8 +644,60 @@ footer{
     }
 }
 
+@media (max-width: 605px){
+	iframe {
+		height: 1400px;
+	}
+}
+
+@media (min-width: 606px) and (max-width: 899px){
+	iframe {
+		height: 810px;
+	}
+}
+
+@media (min-width: 900px) and (max-width: 1199px){
+	iframe {
+		height: 712px;
+	}
+}
+
+@media (min-width: 1200px) and (max-width: 1499px){
+	iframe {
+		height: 576px;
+	}
+}
+
+@media (min-width: 1500px){
+	iframe {
+		height: 450px;
+	}
+}
+
 @media (hover: none) {
-	#gallery img {
-		filter: none;
+	@media (max-width: 400px){
+		iframe {
+			height: 1600px;
+		}
+	}
+	@media (min-width: 401px) and (max-width: 550px){
+		iframe {
+			height: 1420px;
+		}
+	}
+	@media (min-width: 551px) and (max-width: 850px){
+		iframe {
+			height: 1250px;
+		}
+	}
+	@media (min-width: 851px) and (max-width: 1600px){
+		iframe {
+			height: 1120px;
+		}
+	}
+	@media (min-width: 1601px){
+		iframe {
+			height: 1025px;
+		}
 	}
 }
