--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,10 @@ body{
 	font-family: Futura, "Trebuchet MS", Arial, sans-serif;
 }
 
+.body-content{
+	background-color: white;
+}
+
 ::-webkit-scrollbar {
     display: none;
 }
@@ -52,12 +56,6 @@ body{
 
 /*Content*/
 
-.placeholder{
-    height: 300px;
-    width: 100%;
-    background-color: #ffffff;
-}
-
 /*Record Animation*/
 
 .record-stack{
@@ -99,7 +97,7 @@ body{
     position: sticky;
     z-index: 2;
     text-align: center;
-    }
+}
 
 .record img{
     margin-bottom: -4px;
@@ -190,8 +188,6 @@ body{
 .menu li a {
     text-decoration: none;
     color: #FF624C;
-    opacity: 1;
-    font-family: 'work sans', sans serif;
     font-size: 1.5em;
     font-weight: 400;
     transition: 200ms;
@@ -205,7 +201,6 @@ body{
 .menu li a i {
     text-decoration: none;
     color: #FF624C;
-    opacity: 1;
     font-size: 1em;
     font-weight: 150;
     transition: 200ms;
@@ -379,12 +374,13 @@ footer{
 
 .footer-nav ul{
 	padding-bottom: 40px;
+	margin-right: -24px;
 }
 
 .footer-nav ul li{
 	display: inline-block;
 	text-transform: uppercase;
-    margin-right: 14px;
+    margin-right: 24px;
 }
 
 .footer-nav ul li a{
@@ -420,6 +416,7 @@ footer{
 	max-width: 600px;
 	padding-left: 60px;
     padding-right: 60px;
+	padding-bottom: 40px;
 	margin: auto;
 }
 
@@ -430,12 +427,12 @@ footer{
 .footer-info p{
 	margin-bottom: 2px;
 	color: rgb(239, 239, 239);
-	letter-spacing: 1px;
 	text-decoration: none;
 	font-size: 18px;
-	letter-spacing: 3px;
+	letter-spacing: 1px;
 	color: rgb(239, 239, 239);
 	line-height: 50px;
+	letter-spacing: 2px;
 }
 
 .footer-info a{
@@ -444,6 +441,7 @@ footer{
 	color: rgb(239, 239, 239);
 	line-height: 25px;
 	text-decoration: underline;
+	text-decoration-color: #469297;
 	text-decoration-thickness: 1px;
 	text-underline-offset: 5px;
 }
@@ -452,11 +450,90 @@ footer{
 	margin-top: 40px;
 }
 
+.footer-links a i{
+	cursor: pointer;
+	color: #469297;
+}
+
+.footer-links a:hover i{
+	cursor: pointer;
+	color: #FF614B;
+}
+
 #divider{
 	font-size: 20px;
 	margin-left: 20px;
 	margin-right: 20px;
 	text-decoration: none;
+}
+
+.hours{
+	margin-top: -15px;
+	margin-bottom: 40px;
+}
+
+.hours p{
+	line-height: normal;
+	letter-spacing: normal;
+	font-size: 16px;
+}
+
+.socials-footer{
+	margin-top: 40px;
+	margin-bottom: -10px;
+}
+
+.socials-footer li a i:hover {
+    color: #ffb3a9;
+	cursor: pointer;
+}
+
+.socials-footer li a {
+    text-decoration: none;
+    color: #FF624C;
+    font-size: 1.3em;
+    font-weight: 400;
+    transition: 200ms;
+}
+
+.socials-footer li a:hover {
+	cursor: pointer;
+	color: #ffb3a9;
+}
+
+.socials-footer li a i {
+    text-decoration: none;
+    color: #FF624C;
+    font-size: 1em;
+    font-weight: 150;
+    transition: 200ms;
+}
+
+.socials-footer li{
+	display: inline-block;
+	width: 10%;
+	min-width: 40px;
+}
+
+.title-top{
+	bottom: 95vh;
+	top: 0;
+	z-index: 9999;
+	width: fit-content;
+	margin: auto;
+	margin-top: -98vh;
+	height: 10vh;
+	margin-bottom: -10vh;
+	text-shadow: 1px 1px #FF614B, 1.5px 1.5px #000000;
+}
+
+.title-top a{
+	color: white;
+	position: sticky;
+	position: -webkit-sticky;
+	text-decoration: none;
+	top: 2vh;
+	letter-spacing: 2px;
 }
 
 /*Media Queries (Responsiveness)*/
@@ -477,6 +554,18 @@ footer{
     .header-background {
 	    background-image: url(images/RecordWall.jpg);
    }
+}
+
+@media (min-width: 701px) and (max-width: 1025px){
+	.title-top a{
+		font-size: calc(16px + 1vw);
+	}
+}
+
+@media (min-width: 701px){
+	.center-text {
+		font-size: 60px;
+	}
 }
 
 @media (max-height: 360px){
@@ -523,6 +612,10 @@ footer{
         height: 42px;
         width: 52px;
     }
+
+	.title-top a{
+		font-size: calc(16px + 1vw);
+	}
 }
 
 @media (min-height: 361px) and (max-height: 600px){
@@ -568,7 +661,11 @@ footer{
     .logo-top {
         height: 48px;
         width: 60px;
-    }
+	}
+
+	.title-top a{
+			font-size: calc(18px + 1vw);
+	}
 }
 
 @media (min-height: 601px){
@@ -615,6 +712,11 @@ footer{
         height: 64px;
         width: 80px;
     }
+
+	.title-top a{
+		font-size: calc(18px + 1vw);
+		letter-spacing: 2px;
+	}
 }
 
 @media (max-width: 700px) and (min-height: 601px){
@@ -661,6 +763,11 @@ footer{
         height: 48px;
         width: 60px;
     }
+
+	.title-top a{
+		font-size: calc(16px + 1vw);
+		letter-spacing: 0;
+	}
 }
 
 @media (max-width: 500px) {
