--- a/styles.css
+++ b/styles.css
@@ -19,20 +19,6 @@ body{
     display: none;
 }
 
-.header-background{
-    margin: 0;
-    background-position: center center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    -webkit-background-size: cover;
-    height: 100vh;
-    margin-bottom: -100vh;
-    position: -webkit-sticky;
-    position: sticky;
-    top: 0px;
-    z-index: -999;
-}
-
 .blur {
     filter: blur(10px);
     -webkit-filter: blur(10px);
@@ -47,19 +33,16 @@ body{
     width: 100vw;
     height: 100vh;
     z-index: 99999;
-    background-color: #ffeab0;
+    background-color: #ead392;
     display: flex;
     align-items: center;
     justify-content: center;
 }
+
 .loader img{
     width: 250px;
     height: 250px;
 }
-
-
-
-
 
 /*Content*/
 
@@ -135,12 +118,12 @@ body{
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
+    filter: drop-shadow(0 0 5px #0000002e)
 }
-
 
 /*Scroll to top*/
 
-#BtnContain{
+#to-top-button-container{
     display: none;
     position: fixed;
     height: 80px;
@@ -160,7 +143,7 @@ body{
     cursor: pointer;
 }
 
-#myBtn {
+#to-top-button {
     width: auto;
     height: 80px;
     align-items: left;
@@ -169,7 +152,7 @@ body{
     transition: opacity .2s linear;
 }
   
-#myBtn:hover {
+#to-top-button:hover {
     opacity: 0;
 }
 
@@ -289,7 +272,7 @@ nav {
 	z-index: 999;
 }
   
-.menuToggle {
+.menu-toggle {
     position: fixed;
     top: 25px;
     right: 25px;
@@ -298,7 +281,7 @@ nav {
     user-select: none;
 }
   
-.menuToggle input {
+.menu-toggle input {
     display: flex;
     width: 34px;
     height: 32px;
@@ -310,7 +293,7 @@ nav {
     margin-left: -2px;
 }
   
-.menuToggle span {
+.menu-toggle span {
     display: flex;
     width: 28px;
     height: 2.5px;
@@ -326,27 +309,27 @@ nav {
                 opacity 0.55s ease;
 }
   
-.menuToggle span:first-child {
+.menu-toggle span:first-child {
     transform-origin: 0% 0%;
 }
   
-.menuToggle span:nth-last-child(2) {
+.menu-toggle span:nth-last-child(2) {
     transform-origin: 0% 100%;
 }
   
-.menuToggle input:checked ~ span {
+.menu-toggle input:checked ~ span {
     opacity: 1;
     transform: rotate(45deg) translate(-3.5px, -1px);
     background: #36383F;
     box-shadow: none;
 }
 
-.menuToggle input:checked ~ span:nth-last-child(3) {
+.menu-toggle input:checked ~ span:nth-last-child(3) {
     opacity: 0;
     transform: rotate(0deg) scale(0.2, 0.2);
 }
   
-.menuToggle input:checked ~ span:nth-last-child(2) {
+.menu-toggle input:checked ~ span:nth-last-child(2) {
     transform: rotate(-45deg) translate(0, -1px);
 }
   
@@ -366,7 +349,7 @@ nav {
 	text-align: center;
 }
   
-.menuToggle input:checked ~ ul {
+.menu-toggle input:checked ~ ul {
     transform: none;
 }
 
@@ -472,6 +455,7 @@ footer{
 	margin-left: 20px;
 	margin-right: 20px;
 	text-decoration: none;
+	color: rgb(239, 239, 239);
 }
 
 .hours{
@@ -529,13 +513,25 @@ footer{
 	width: fit-content;
 	margin: auto;
 	margin-top: -98vh;
+	height: 8vh;
+	margin-bottom: 90vh;
+	text-shadow: 1px 1px #FF614B, 1.5px 1.5px #000000;
+}
+
+.title-top-home{
+	bottom: 95vh;
+	top: 0;
+	z-index: 9999;
+	width: fit-content;
+	margin: auto;
+	margin-top: -98vh;
 	height: 10vh;
 	margin-bottom: -10vh;
 	text-shadow: 1px 1px #FF614B, 1.5px 1.5px #000000;
 }
 
 .title-top a{
-	color: white;
+	color: rgb(249, 249, 249);
 	position: sticky;
 	position: -webkit-sticky;
 	text-decoration: none;
@@ -543,28 +539,426 @@ footer{
 	letter-spacing: 2px;
 }
 
+.title-top-home a{
+	color: rgb(249, 249, 249);
+	position: sticky;
+	position: -webkit-sticky;
+	text-decoration: none;
+	top: 2vh;
+	letter-spacing: 2px;
+}
+
+/* About Page */
+
+/* Header */
+
+.center-text {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-size: 8vw;
+    letter-spacing: 10px;
+    color: white;
+    font-weight: bold;
+    display: inline-block;
+    white-space: nowrap;
+    z-index: 1;
+    text-shadow: 0px 0px 30px #000000;
+}
+
+/* Main content*/
+
+.content{
+	margin-right: 5vw;
+	margin-left: 5vw;
+	width: 90vw
+}
+
+.from{
+    width: 100%;
+    font-size: 3vw;
+	text-align: center;
+}
+
+.contR{
+    display: flex;
+    flex-direction: row;
+    margin-bottom: 1rem;
+}
+
+.contL{
+    display: flex;
+    flex-direction: row-reverse;
+    margin-bottom: 1rem;
+}
+
+.box{
+    flex: 50%;
+    text-align: center;
+	width: 45vw;
+	margin-top: 40px;
+}
+
+.box p{
+    font-size: 3vw;
+	width: 42vw;
+}
+
+.img-cont {
+    width: 45vw;
+}
+
+.box img{
+	width: 42vw;
+	transition: ease;
+    transition: all .3s;
+}
+
+.box:hover img{
+    width: 45vw;
+    transition: ease;
+    transition: all .3s;
+}
+
+.button-container{	
+	display: flex;	
+	justify-content: center;	
+	align-items: center;	
+	height: 200px;	
+}	
+.review-button {	
+	display: inline-block;	
+	padding: 0.75rem 1.25rem;	
+	border-radius: 10rem;	
+	color: #fff;	
+	text-decoration: none;	
+	font-size: 1rem;	
+	letter-spacing: 1px;	
+	transition: all 0.3s;	
+	position: relative;	
+	overflow: hidden;	
+	z-index: 1;
+}
+
+.review-button:after {	
+	content: '';	
+	position: absolute;	
+	bottom: 0;	
+	left: 0;	
+	width: 100%;	
+	height: 100%;	
+	background-color: #FF614B;	
+	border-radius: 10rem;	
+	z-index: -2;	
+}	
+
+.review-button:before {	
+	content: '';	
+	position: absolute;	
+	bottom: 0;	
+	left: 0;	
+	width: 0%;	
+	height: 100%;	
+	background-color: #469297;	
+	transition: all 0.3s;	
+	border-radius: 10rem;	
+	z-index: -1;	
+}	
+
+.review-button:hover {	
+	color: #fff;	
+}	
+
+.review-button:hover:before {	
+	width: 100%;
+}
+
+.center{		
+	margin: auto;	
+	max-width: 600px;	
+	margin-top: 60px;	
+	margin-bottom: 60px;
+}
+
+#gallery {	
+    line-height:0;	
+    -webkit-column-count:5;
+    -webkit-column-gap:5px;
+    -moz-column-count:5;	
+    -moz-column-gap:5px;	
+    column-count:5;	
+    column-gap:5px;	
+    margin-left: 5vw;	
+    margin-right: 5vw;	
+    margin-top: 20vh;
+}
+
+#gallery img {	
+	width: 100% !important;	
+	height: auto !important;	
+	margin-bottom:5px;
+	transition: filter 0.2s;	
+	filter: brightness(50%);	
+}
+
+#gallery img:hover {	
+    filter: none;
+}
+
+#darkbox {
+	width:1280px; 
+	height:720px; 
+	position:absolute; 
+	top:0; 
+	left:0; 
+	background-color:#333; 
+	overflow: hidden; 
+	text-align:center;
+}
+
+.darkboximg {
+	padding:5%; 
+	max-width: 80vw; 
+	max-height: 90vh;
+}
+
+@keyframes idle {
+    0% {
+        transform: translate(0, 0px);
+    }
+    50% {
+        transform: translate(0, 5px);
+    }
+    100% {
+        transform: translate(0, -0px);
+    }
+}
+
 /*Media Queries (Responsiveness)*/
 
 @media (max-width: 700px) {
-    .header-background {
+    .header-background-home {
         background-image: url(images/Records.jpg);
+		margin: 0;
+		background-position: center center;
+		background-repeat: no-repeat;
+		background-size: cover;
+		-webkit-background-size: cover;
+		height: 100vh;
+		margin-bottom: -100vh;
+		position: -webkit-sticky;
+		position: sticky;
+		top: 0px;
+		z-index: -999;
+	}
+
+	.header-background-about {
+        background-image: url(images/HunterEyeCuriosities.jpeg);
+		margin: 0;
+		background-position: center center;
+		background-repeat: no-repeat;
+		background-size: cover;
+		-webkit-background-size: cover;
+		height: 100vh;
+		z-index: -9999;
+	}
+
+	.header-background-products {	
+		background-image: url(images/HunterEyeCuriosities.jpeg);
+		margin: 0;
+		background-position: center center;
+		background-repeat: no-repeat;
+		background-size: cover;
+		-webkit-background-size: cover;
+		height: 100vh;
+		z-index: -9999;
+    }
+
+	.header-background-reviews {	
+		background-image: url(images/HunterEyeCuriosities.jpeg);
+		margin: 0;
+		background-position: center center;
+		background-repeat: no-repeat;
+		background-size: cover;
+		-webkit-background-size: cover;
+		height: 100vh;
+		z-index: -9999;
+    }
+
+	.header-background-contact {	
+		background-image: url(images/HunterEyeCuriosities.jpeg);
+		margin: 0;
+		background-position: center center;
+		background-repeat: no-repeat;
+		background-size: cover;
+		-webkit-background-size: cover;
+		height: 100vh;
+		z-index: -9999;
+    }
+
+	.header-background-gallery {	
+		background-image: url(images/HunterEyeCuriosities.jpeg);
+		margin: 0;
+		background-position: center center;
+		background-repeat: no-repeat;
+		background-size: cover;
+		-webkit-background-size: cover;
+		height: 100vh;
+		z-index: -9999;
     }
 }
 
 @media (min-width: 701px) and (max-width: 1024px) {
-    .header-background {
+    .header-background-home {
         background-image: url(images/PolaroidWall.jpg);
+		margin: 0;
+		background-position: center center;
+		background-repeat: no-repeat;
+		background-size: cover;
+		-webkit-background-size: cover;
+		height: 100vh;
+		margin-bottom: -100vh;
+		position: -webkit-sticky;
+		position: sticky;
+		top: 0px;
+		z-index: -99
+	}
+
+	.header-background-about {
+        background-image: url(images/Hunter.jpg);
+		margin: 0;
+		background-position: center center;
+		background-repeat: no-repeat;
+		background-size: cover;
+		-webkit-background-size: cover;
+		height: 100vh;
+		z-index: -9999;
+	}
+
+	.header-background-products {	
+		background-image: url(images/Hunter.jpg);
+		margin: 0;
+		background-position: center center;
+		background-repeat: no-repeat;
+		background-size: cover;
+		-webkit-background-size: cover;
+		height: 100vh;
+		z-index: -9999;
+    }
+
+	.header-background-reviews {	
+		background-image: url(images/Hunter.jpg);
+		margin: 0;
+		background-position: center center;
+		background-repeat: no-repeat;
+		background-size: cover;
+		-webkit-background-size: cover;
+		height: 100vh;
+		z-index: -9999;
+    }
+
+	.header-background-contact {	
+		background-image: url(images/Hunter.jpg);
+		margin: 0;
+		background-position: center center;
+		background-repeat: no-repeat;
+		background-size: cover;
+		-webkit-background-size: cover;
+		height: 100vh;
+		z-index: -9999;
+    }
+
+	.header-background-gallery {	
+		background-image: url(images/Hunter.jpg);
+		margin: 0;
+		background-position: center center;
+		background-repeat: no-repeat;
+		background-size: cover;
+		-webkit-background-size: cover;
+		height: 100vh;
+		z-index: -9999;
     }
 }
 
 @media (min-width: 1025px){
-    .header-background {
-	    background-image: url(images/RecordWall.jpg);
-   }
+    .header-background-home {
+        background-image: url(images/RecordWall.jpg);
+		margin: 0;
+		background-position: center center;
+		background-repeat: no-repeat;
+		background-size: cover;
+		-webkit-background-size: cover;
+		height: 100vh;
+		margin-bottom: -100vh;
+		position: -webkit-sticky;
+		position: sticky;
+		top: 0px;
+		z-index: -99
+	}
+
+	.header-background-about {
+        background-image: url(images/HunterAndCamGuitar.jpg);
+		margin: 0;
+		background-position: center center;
+		background-repeat: no-repeat;
+		background-size: cover;
+		-webkit-background-size: cover;
+		height: 100vh;
+		z-index: -9999;
+	}
+
+	.header-background-products {	
+		background-image: url(images/HunterAndCamGuitar.jpg);
+		margin: 0;
+		background-position: center center;
+		background-repeat: no-repeat;
+		background-size: cover;
+		-webkit-background-size: cover;
+		height: 100vh;
+		z-index: -9999;
+	}
+
+	.header-background-reviews {	
+		background-image: url(images/HunterAndCamGuitar.jpg);
+		margin: 0;
+		background-position: center center;
+		background-repeat: no-repeat;
+		background-size: cover;
+		-webkit-background-size: cover;
+		height: 100vh;
+		z-index: -9999;
+	}
+
+	.header-background-contact {	
+		background-image: url(images/HunterAndCamGuitar.jpg);
+		margin: 0;
+		background-position: center center;
+		background-repeat: no-repeat;
+		background-size: cover;
+		-webkit-background-size: cover;
+		height: 100vh;
+		z-index: -9999;
+	}
+
+	.header-background-gallery {	
+		background-image: url(images/HunterAndCamGuitar.jpg);
+		margin: 0;
+		background-position: center center;
+		background-repeat: no-repeat;
+		background-size: cover;
+		-webkit-background-size: cover;
+		height: 100vh;
+		z-index: -9999;
+	}
 }
 
 @media (min-width: 701px) and (max-width: 1025px){
 	.title-top a{
+		font-size: calc(16px + 1vw);
+	}
+
+	.title-top-home a{
 		font-size: calc(16px + 1vw);
 	}
 }
@@ -623,6 +1017,10 @@ footer{
 	.title-top a{
 		font-size: calc(16px + 1vw);
 	}
+
+	.title-top-home a{
+		font-size: calc(16px + 1vw);
+	}
 }
 
 @media (min-height: 361px) and (max-height: 600px){
@@ -673,6 +1071,10 @@ footer{
 	.title-top a{
 		font-size: calc(18px + 1vw);
 	}
+
+	.title-top-home a{
+		font-size: calc(18px + 1vw);
+	}
 }
 
 @media (min-height: 601px){
@@ -721,6 +1123,10 @@ footer{
     }
 
 	.title-top a{
+		font-size: calc(18px + 1vw);
+		letter-spacing: 2px;
+	}
+	.title-top-home a{
 		font-size: calc(18px + 1vw);
 		letter-spacing: 2px;
 	}
@@ -775,12 +1181,34 @@ footer{
 		font-size: calc(16px + 1vw);
 		letter-spacing: 0;
 	}
+
+	.title-top-home a{
+		font-size: calc(16px + 1vw);
+		letter-spacing: 0;
+	}
+}
+
+@media (min-width: 701px) and (max-width: 1025px){
+	.title-top a{
+		font-size: calc(16px + 1vw);
+	}
+
+	.title-top-home a{
+		font-size: calc(16px + 1vw);
+	}
+}
+
+@media (min-width: 701px){
+	.center-text {
+		font-size: 60px;
+	}
 }
 
 @media (max-width: 500px) {
     .menu {
         width: calc(100vw - 98px);
         margin-left: calc(-100vw + 54px);
+		text-align: center;
     }
 }
   
@@ -788,6 +1216,7 @@ footer{
     .menu {
         width: 300px;
         margin-left: -345px;
+		text-align: center;
     }
 }
 
@@ -797,6 +1226,7 @@ footer{
         margin-left: calc(-100vw + 54px);
         padding-top: 45px;
         padding-bottom: 55px;
+		text-align: center;
     }
 }
 
@@ -804,5 +1234,133 @@ footer{
     .menu {
         padding-top: 45px;
         padding-bottom: 55px;
+		text-align: center;
     }
+}
+
+@media (max-width: 701px){
+	.contL{
+		flex-direction: column;
+	}
+	.contR{
+		flex-direction: column;
+	}
+	.box{
+		flex: 100%;
+		text-align: center;
+		width: 90vw;
+		margin-top: 40px;
+	}
+	.box p{
+		font-size: 3vh;
+		width: 90vw;
+	}
+	.img-cont {
+		width: 90vw;
+	}
+	.box img{
+		width: 90vw;
+	}
+	
+	.box:hover img{
+		width: 90vw;
+	}
+}
+
+@media (max-height: 360px){	
+    .menu {	
+        padding-top: 45px;	
+        padding-bottom: 55px;	
+        text-align: center;	
+    }	
+}	
+@media (max-width: 605px){	
+	.google-reviews {	
+		height: 1400px;	
+	}	
+}	
+@media (min-width: 606px) and (max-width: 899px){	
+	.google-reviews {	
+		height: 810px;	
+	}	
+}	
+@media (min-width: 900px) and (max-width: 1199px){	
+	.google-reviews {	
+		height: 712px;	
+	}	
+}	
+@media (min-width: 1200px) and (max-width: 1499px){	
+	.google-reviews {	
+		height: 576px;	
+	}	
+}	
+@media (min-width: 1500px){	
+	.google-reviews {	
+		height: 450px;	
+	}	
+}	
+@media (hover: none) {	
+	@media (max-width: 400px){	
+		.google-reviews {	
+			height: 1600px;	
+		}	
+	}	
+	@media (min-width: 401px) and (max-width: 550px){	
+		.google-reviews {	
+			height: 1420px;	
+		}	
+	}	
+	@media (min-width: 551px) and (max-width: 850px){	
+		.google-reviews {	
+			height: 1250px;	
+		}	
+	}	
+	@media (min-width: 851px) and (max-width: 1600px){	
+		.google-reviews {	
+			height: 1120px;	
+		}	
+	}	
+	@media (min-width: 1601px){	
+		.google-reviews {	
+			height: 1025px;	
+		}	
+	}	
+}
+
+@media (max-width: 1200px) {
+    #gallery {
+     -moz-column-count:    4;
+     -webkit-column-count: 4;
+     column-count:         4;
+    }
+}
+
+@media (max-width: 1000px) {
+    #gallery {
+     -moz-column-count:    3;
+     -webkit-column-count: 3;
+     column-count:         3;
+    }
+}
+
+@media (max-width: 800px) {
+    #gallery {
+     -moz-column-count:    2;
+     -webkit-column-count: 2;
+     column-count:         2;
+    }
+}
+
+@media (max-width: 400px) {
+    #gallery {
+     -moz-column-count:    1;
+     -webkit-column-count: 1;
+     column-count:         1;
+    }
+}
+
+@media (hover: none) {
+	#gallery img {
+		filter: none;
+	}
 }
