--- a/styles.css
+++ b/styles.css
@@ -822,8 +822,8 @@ footer{
 
 .slides div img{
 	width: 100%;
-	height: calc(90vw / 1.49926793558 - 50px);
-	max-height: calc(900px / 1.49926793558 - 50px);
+	height: calc(90vw / 1.49926793558 - 39px);
+	max-height: calc(900px / 1.49926793558 - 39px);
 	border-radius: 10px;
 	transform-origin: center center;
 	transition: transform 0.5s;
@@ -881,8 +881,9 @@ footer{
 
 .facebook-frame{
 	width: 100vw;
-	text-align: center;
 	margin-bottom: 60px;
+	max-width: 100vw;
+	overflow: hidden;
 }
 
 @keyframes idle {
@@ -1405,6 +1406,24 @@ footer{
 @media (min-width: 701px){
 	.center-text {
 		font-size: 60px;
+	}
+}
+
+@media (max-width: 500px){
+	#big-frame{
+		display: none;
+	}
+	#small-frame{
+		display: block;
+	}
+}
+
+@media (min-width: 501px){
+	#big-frame{
+		display: block;
+	}
+	#small-frame{
+		display: none;
 	}
 }
 
